# Progressive-Structural-Illumination-MCP

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
docs/: architecture.md  blast-radius-map.md  build-contract-coverage-audit.md  canonical-source-corpus.md  hardening-audit-2026-04-29.md  installation.md  known-limitations.md  schema-reference.md  tool-resource-prompt-reference.md  troubleshooting.md
examples/: claude-desktop-config.json  export-import-example.md  local-http-config.md  sample-reflect-request.json
src/psi_coprocessor_mcp/: __init__.py  app.py  cli.py  config.py  db.py  models.py  repository.py  seed.py  service.py  utils.py
src/psi_coprocessor_mcp/migrations/: 0001_core.sql  0002_retrieval_fts.sql  0003_indexes.sql  0004_rubric_integration.sql  0005_methodology_ontology.sql  0006_control_surface.sql
src/psi_coprocessor_mcp/runtime/: analysis.py  artifacts.py  coherence.py  compliance.py  control.py  gaps.py  source_audit.py  stress.py  structure.py  summaries.py  tracing.py
tests/: conftest.py  test_artifacts_and_exports.py  test_mcp_interface.py  test_migrations_and_memory.py  test_runtime_service.py
tests/fixtures/: continuity_poison.diff
