[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psi-coprocessor-mcp"
version = "1.0.1"
description = "A local-first MCP server that operationalizes Progressive Structural Illumination as a typed cognitive coprocessor."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Ashbi" }
]
keywords = ["mcp", "model-context-protocol", "sqlite", "psi", "reasoning", "architecture", "debugging"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.27.0,<2.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/ahmiershadowman-commits/Progressive-Structural-Illumination-MCP"
Repository = "https://github.com/ahmiershadowman-commits/Progressive-Structural-Illumination-MCP"
Issues = "https://github.com/ahmiershadowman-commits/Progressive-Structural-Illumination-MCP/issues"
Documentation = "https://github.com/ahmiershadowman-commits/Progressive-Structural-Illumination-MCP#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
]

[project.scripts]
psi-coprocessor-mcp = "psi_coprocessor_mcp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
psi_coprocessor_mcp = ["migrations/*.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  "error",
]
